# esp32_get_started

./: README.md
accelerator_spi/: CMakeLists.txt
accelerator_spi/main/: CMakeLists.txt  accelerator.c
creative/main/: CMakeLists.txt  accelerator.c  creative.c  creative.h  dht11_get_humidity.c  dht11_get_temp.c  init_sh1106.c  oled.c  oled_init.c  oled_print.c  oled_print_hum.c  refresh_sh1106.c
esp32_get_started/: LICENSE  README.md
esp32_get_started/accelerator_spi/main/: register_map.h
esp32_get_started/creative/main/: peripherals.h
esp32_get_started/led_i2c/main/: CMakeLists.txt  oled.c
led_i2c/main/: oled.c
t00/main/: CMakeLists.txt  hello_world.c
t01/: CMakeLists.txt
t01/main/: CMakeLists.txt  led.c
t02/: CMakeLists.txt
t02/main/: CMakeLists.txt  pwm_dac.c
t03/: CMakeLists.txt
t03/main/: CMakeLists.txt  button.c
t04/: CMakeLists.txt
t04/main/: CMakeLists.txt  dht11.c
t05/: CMakeLists.txt
t05/main/: CMakeLists.txt  uart.c
t06/main/: CMakeLists.txt  speaker.c
t07/: CMakeLists.txt
t07/main/: oled.c
t08/main/: accelerator.c
